git index.html (Git) message

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@ iframe{
 
             <div class="item box_1_2">
                 <div id="projects">
-                    <p>Here are three examples of fun web development</p>
+                    <p>(Git) Here are three examples of fun web development</p>
                     <p>I created these to practice my skills, and to teach others about code.</p>
                     <p>It may be fun to start learning by working through these projects.</p>
                     <p>Click here to look at them: <a href="C:\Users\SURFACE\Documents\my_code\common_code\final_port\fun_home_f\index.html" target="_blank">Projects</a></p>
