a git home message

--- a/index.html
+++ b/index.html
@@ -420,10 +420,12 @@ iframe{
 
             <div class="item box_1_2">
                 <div id="projects">
-                    <p>(Git) Here are three examples of fun web development</p>
+                    <p>This site is under maintenance! I am doing my best to resolve any issues.</p>
+                    <p>Please reach out if you have any comments/questions</p>
+                    <p>Here are three examples of fun web development</p>
                     <p>I created these to practice my skills, and to teach others about code.</p>
                     <p>It may be fun to start learning by working through these projects.</p>
-                    <p>Click here to look at them: <a href="C:\Users\SURFACE\Documents\my_code\common_code\final_port\fun_home_f\index.html" target="_blank">Projects</a></p>
+                    <p>Click here to look at them: <a href="https://www.catmanney.com/fun_home_git/" target="_blank">Projects</a></p>
                 </div>
             </div>
         </div>
@@ -433,13 +435,13 @@ iframe{
                 <div id="box_2_1_1">
                     <div class="item box_2_1_1_1">
                         <div id="goals">
-                            <p>Summer 2021 goals</p>
+                            <p>Autumn 2021 goals</p>
                             <ul>
-                                <li>Complete personal website (this one)</li>
-                                <li>Add captions and notes to coding tutorials</li>
-                                <li>Continue practicing Chinese language</li>
-                                <li>Become more adept at Ukelele</li>
-                                <li>Enjoy nature and the water</li>
+                                <li>Use my Web Development skills to meet people's needs</li>
+                                <li>Improve my articulation by creating useful content</li>
+                                <li>Continue practicing spoken Chinese</li>
+                                <li>Use music and art to unwind and promote creativity</li>
+                                <li>Resolve questions in relation to career and personal life</li>
                             </ul>
                         </div>
                     </div>
