--- a/text_ad_git/index.html
+++ b/text_ad_git/index.html
@@ -24,6 +24,6 @@
       <input type="text" id="itest" value=""/>
     </form>
     <button id="game_b" onclick="use_items()">Submit</button>
-    <script src="text_adv_js.js"></script>
+    <script src="https://www.catmanney.com/text_ad_git/text_adv_js.js"></script>
   </body>
 </html>
